snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1.pom.sha1
3b15e4830d605f59d1b6ca25c6ef13df4ecc0931